# rust_canvas_2d

./: Cargo.toml  README.md  build.sh  index.html
pkg/: canvas_2d_test1.js  canvas_2d_test1_bg.wasm  package.json
src/: lib.rs
