[package]
name = "canvas_2d_test1"
version = "0.1.0"
authors = ["Justin Clift <justin@postgresql.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.36"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
]
